RESOLVED FIXED 172590
[css-grid] Margin wrong applied when stretching an orthogonal item in fixed size track
https://bugs.webkit.org/show_bug.cgi?id=172590
Summary [css-grid] Margin wrong applied when stretching an orthogonal item in fixed s...
Manuel Rego Casasnovas
Reported 2017-05-25 07:50:58 PDT
Created attachment 311218 [details] Example to reproduce the issue Margin is wrongly computed when applied to an orthogonal item inside a fixed size track.
Attachments
Example to reproduce the issue (671 bytes, text/html)
2017-05-25 07:50 PDT, Manuel Rego Casasnovas
no flags
Example to reproduce the issue (671 bytes, text/html)
2017-05-25 07:51 PDT, Manuel Rego Casasnovas
no flags
Current output (16.81 KB, image/png)
2017-05-25 07:52 PDT, Manuel Rego Casasnovas
no flags
Patch (13.81 KB, patch)
2017-06-01 15:03 PDT, Javier Fernandez
no flags
Patch (13.83 KB, patch)
2017-06-02 01:28 PDT, Javier Fernandez
no flags
Manuel Rego Casasnovas
Comment 1 2017-05-25 07:51:51 PDT
Created attachment 311219 [details] Example to reproduce the issue
Manuel Rego Casasnovas
Comment 2 2017-05-25 07:52:27 PDT
Created attachment 311220 [details] Current output
Javier Fernandez
Comment 3 2017-05-26 02:33:52 PDT
This issue doesn't look like the same reported in Blink. In this case, the margins are not computed properly even avoiding repeating the grid layout logic, which was the cause of the Blink's issue.
Javier Fernandez
Comment 4 2017-06-01 15:03:01 PDT
Sergio Villar Senin
Comment 5 2017-06-02 00:48:14 PDT
Comment on attachment 311763 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=311763&action=review > Source/WebCore/ChangeLog:11 > + The issue this CL fixes is only reproducible when the grid layout logic CL is not common in WebKit, use patch/change...
Javier Fernandez
Comment 6 2017-06-02 01:28:18 PDT
WebKit Commit Bot
Comment 7 2017-06-02 02:08:19 PDT
Comment on attachment 311808 [details] Patch Clearing flags on attachment: 311808 Committed r217705: <http://trac.webkit.org/changeset/217705>
WebKit Commit Bot
Comment 8 2017-06-02 02:08:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.