[css-grid] Margin wrong applied when stretching an orthogonal item in fixed size track https://bugs.webkit.org/show_bug.cgi?id=172590

Reviewed by Sergio Villar Senin.

LayoutTests/imported/w3c:

All the test cases of these tests pass with this change, so updating their expectations accordingly.

* web-platform-tests/css/css-grid-1/alignment/grid-self-alignment-stretch-006-expected.txt:
* web-platform-tests/css/css-grid-1/alignment/grid-self-alignment-stretch-vertical-lr-006-expected.txt:
* web-platform-tests/css/css-grid-1/alignment/grid-self-alignment-stretch-vertical-rl-006-expected.txt:

Source/WebCore:

We need to consider orthogonality when using the item's logical margin to
compute the available space for stretching.

The issue this patch fixes is only reproducible when the grid layout logic
is executed several times, since probably the item doesn't need to be
laid out again. In such cases, we just get the cached logical margins
but we were not taking orthogonality into account.

Test: fast/css-grid-layout/grid-item-stretching-must-not-depend-on-previous-layouts.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutBlock):
(WebCore::RenderGrid::marginLogicalSizeForChild):
(WebCore::RenderGrid::availableAlignmentSpaceForChildBeforeStretching):
* rendering/RenderGrid.h:

LayoutTests:

* TestExpectations: 2 tests pass now but 3 more fail because of bug #172836
* fast/css-grid-layout/grid-item-stretching-must-not-depend-on-previous-layouts-expected.html: Added.
* fast/css-grid-layout/grid-item-stretching-must-not-depend-on-previous-layouts.html: Added.


Canonical link: https://commits.webkit.org/189737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217705 268f45cc-cd09-0410-ab3c-d52691b4dbfc